2004-09-08  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* ...: Merged in changes from newopt branch to deal with dependent uniforms.

2004-08-24  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/HairPhysics.cpp (init): More cleanups...

	* src/shaders/BrickWall.cpp (init): Clean up some code.

	* src/shaders/HDRShinyBumpMap.cpp (init): Reindent.

	* src/shaders/HairShader.cpp (init): Clean up a bit of code.

2004-07-27  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/ShrikeCanvas.cpp (motion): Change from inv to inverse.

	* Added copyright statements to the heads of all the files that
	were missing.

	* src/shaders/WorleyShader.cpp: Change from kill to discard.

2004-07-15  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/FragmentLooping.cpp: Added fragment looping demo.

2004-07-14  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/FragmentBranching.cpp: Add simple fragment branching demo.

2004-07-14  Kevin Moule  <krmoule@veil.uwaterloo.ca>

	* src/ShrikeCanvas.cpp (renderObject): Pass in all three
	coordinates of the tangent values.

	* src/shaders/TangentArrows.cpp (render): Pass in all the tangents
	for NormalArrows too.

	* src/shaders/BumpMapShader.cpp: Added this shader.

2004-07-13  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>

	* src/shaders/TangentArrows.cpp (render): Fix a bug, now the z
	component of the tangents actually gets sent. Add a NormalArrows
	shader while we're at it.

	* src/ShrikeFrame.cpp (wireframe): Implemented wireframe support.

	* src/ShrikeFrame.hpp: Added support for wireframe.

	* src/shaders/TexShader.cpp (TexShader): Change name.

	* src/shaders/Derivatives.cpp (Derivatives): Change name.

	* src/shaders/TangentArrows.cpp: Added more complicated tangent
	debugging shader.

	* src/shaders/Tangents.cpp: Added simple tangent debugging shader.

	* src/shaders/Checkerboard.cpp: Compute average colour in the
	shader, made colours static members.
