@@ -25,12 +25,7 @@
 // distribution.
 //////////////////////////////////////////////////////////////////////////////
 #ifdef WIN32
-#define _USE_MATH_DEFINES
 #include <windows.h>
-#endif
-
-#ifndef M_PI
-#define M_PI 3.14159265358979323846
 #endif
 
 #include <GL/gl.h>
