@@ -1,134 +1,127 @@
 # -*- makefile -*-
 
-# comment this out if you want dependencies with makedepend
-DISABLE_DEPENDS = true
+RELEASE_TARGETS = shrike.exe
+DEBUG_TARGETS = shriked.exe
 
-WXWIN_DIR = \dev\wxwin
-CLEANFILES = shrike.exe
+all: all-release all-debug
 
-all: shrike_r.exe
+all-release: $(RELEASE_TARGETS)
+all-debug: $(DEBUG_TARGETS)
 
-shrike_SOURCES =  ShrikeApp.cpp \
-		  ShrikeFrame.cpp \
-		  ShrikeCanvas.cpp \
-		  Shader.cpp \
-		  UniformPanel.cpp \
-		  ShrikePropsDialog.cpp \
-		  Globals.cpp \
-		  Camera.cpp \
-		  ShTrackball.cpp \
-		  Timer.cpp \
-		  util.cpp \
-		  ShrikeGl.cpp
+CLEANFILES  = $(RELEASE_TARGETS) $(DEBUG_TARGETS) *.idb *.pdb
+CLEANFILES += HDRImages\*.obj HDRImages\*.d
+CLEANFILES += shaders\*.obj shaders\*.d
 
-shrike_SOURCES += shaders/DiffuseShader.cpp
-shrike_SOURCES += shaders/DiscoShader.cpp
-shrike_SOURCES += shaders/PhongShader.cpp
-shrike_SOURCES += shaders/SimplePhong.cpp
-shrike_SOURCES += shaders/SimpleDiffuse.cpp
-shrike_SOURCES += shaders/WorleyShader.cpp
-shrike_SOURCES += shaders/TexShader.cpp
-#shrike_SOURCES += shaders/CelShader.cpp
-shrike_SOURCES += shaders/Ashikhmin.cpp
-shrike_SOURCES += shaders/Texter.cpp
-shrike_SOURCES += shaders/Text.cpp
-shrike_SOURCES += shaders/WobbleShader.cpp
-shrike_SOURCES += shaders/FrameMapping.cpp
-shrike_SOURCES += shaders/Logo.cpp
-shrike_SOURCES += shaders/NonPeriodic.cpp
-shrike_SOURCES += shaders/NonPeriodic3D.cpp
-shrike_SOURCES += shaders/NoiseShader.cpp
-shrike_SOURCES += shaders/EdgeGooch.cpp
-shrike_SOURCES += shaders/Textures.cpp
-shrike_SOURCES += shaders/Pants.cpp
-shrike_SOURCES += shaders/EnvMapShader.cpp
-shrike_SOURCES += shaders/ShinyBumpMapShader.cpp
-shrike_SOURCES += shaders/HomomorphicShader.cpp
-shrike_SOURCES += shaders/SatinShader.cpp
-shrike_SOURCES += shaders/JeweledShader.cpp
-shrike_SOURCES += shaders/AlgebraShader.cpp
-shrike_SOURCES += shaders/GlassShader.cpp
-shrike_SOURCES += shaders/LuciteShader.cpp
-shrike_SOURCES += shaders/CookTorrance.cpp
-shrike_SOURCES += shaders/Banks.cpp
-shrike_SOURCES += shaders/BrickWall.cpp
-shrike_SOURCES += shaders/BrickHorizon.cpp
-shrike_SOURCES += shaders/HorizonMapping.cpp
-shrike_SOURCES += shaders/HairShader.cpp
-shrike_SOURCES += shaders/LCD.cpp
-shrike_SOURCES += shaders/LCDSmall.cpp
-shrike_SOURCES += shaders/LafortuneShader.cpp
-shrike_SOURCES += shaders/HairPhysics.cpp
-shrike_SOURCES += shaders/Derivatives.cpp
-shrike_SOURCES += shaders/Checkerboard.cpp
-shrike_SOURCES += shaders/VertexBranching.cpp
-shrike_SOURCES += shaders/Tangents.cpp
-shrike_SOURCES += shaders/TangentArrows.cpp
-shrike_SOURCES += shaders/BumpMapShader.cpp
-shrike_SOURCES += shaders/FragmentBranching.cpp
-shrike_SOURCES += shaders/FragmentLooping.cpp
-shrike_SOURCES += shaders/SpatialBRDF.cpp
-shrike_SOURCES += shaders/HDRViewer.cpp HDRImages/HDRImage.cpp
-shrike_SOURCES += shaders/HDRMipMap.cpp HDRImages/HDRMipmap.cpp
-shrike_SOURCES += shaders/HDRInterp.cpp HDRImages/HDRInterp.cpp
-shrike_SOURCES += shaders/HDRToneMapping.cpp HDRImages/HDRTonemap.cpp
-shrike_SOURCES += shaders/HDRWrap.cpp
-shrike_SOURCES += shaders/CubeMap.cpp
-shrike_SOURCES += shaders/HDRLucite.cpp shaders/HDRGlass.cpp shaders/HDRShinyBumpMap.cpp
+shrike_SOURCES  = Camera.hpp Camera.cpp
+shrike_SOURCES += Globals.hpp Globals.cpp
+shrike_SOURCES += ShTrackball.hpp ShTrackball.cpp
+shrike_SOURCES += Shader.hpp Shader.cpp
+shrike_SOURCES += ShrikeApp.hpp ShrikeApp.cpp
+shrike_SOURCES += ShrikeCanvas.hpp ShrikeCanvas.cpp
+shrike_SOURCES += ShrikeFrame.hpp ShrikeFrame.cpp
+shrike_SOURCES += ShrikeGl.hpp ShrikeGl.cpp
+shrike_SOURCES += ShrikePropsDialog.hpp ShrikePropsDialog.cpp
+shrike_SOURCES += Timer.hpp Timer.cpp
+shrike_SOURCES += UniformPanel.hpp UniformPanel.cpp
+shrike_SOURCES += util.hpp utilimpl.hpp util.cpp
 
-# $(wildcard shaders/*.cpp)
-shrike_DEBUG_OBJECTS = $(shrike_SOURCES:.cpp=.d.obj)
-shrike_RELEASE_OBJECTS = $(shrike_SOURCES:.cpp=.r.obj)
+# shaders
+shrike_SOURCES += shaders\DiffuseShader.cpp
+shrike_SOURCES += shaders\DiscoShader.cpp
+shrike_SOURCES += shaders\PhongShader.cpp
+shrike_SOURCES += shaders\SimplePhong.cpp
+shrike_SOURCES += shaders\SimpleDiffuse.cpp
+shrike_SOURCES += shaders\WorleyShader.cpp
+shrike_SOURCES += shaders\TexShader.cpp
+#shrike_SOURCES += shaders\CelShader.cpp
+shrike_SOURCES += shaders\Ashikhmin.cpp
+shrike_SOURCES += shaders\Texter.cpp
+shrike_SOURCES += shaders\Text.hpp shaders\Text.cpp
+shrike_SOURCES += shaders\WobbleShader.cpp
+shrike_SOURCES += shaders\FrameMapping.cpp
+shrike_SOURCES += shaders\Logo.cpp
+shrike_SOURCES += shaders\NonPeriodic.cpp
+shrike_SOURCES += shaders\NonPeriodic3D.cpp
+shrike_SOURCES += shaders\NoiseShader.cpp
+shrike_SOURCES += shaders\EdgeGooch.cpp
+shrike_SOURCES += shaders\Textures.cpp
+shrike_SOURCES += shaders\Pants.cpp
+shrike_SOURCES += shaders\EnvMapShader.cpp
+shrike_SOURCES += shaders\ShinyBumpMapShader.cpp
+shrike_SOURCES += shaders\HomomorphicShader.cpp
+shrike_SOURCES += shaders\HomomorphicShaderInterp.cpp
+shrike_SOURCES += shaders\SatinShader.cpp
+shrike_SOURCES += shaders\JeweledShader.cpp
+shrike_SOURCES += shaders\AlgebraShader.cpp
+shrike_SOURCES += shaders\GlassShader.cpp
+shrike_SOURCES += shaders\LuciteShader.cpp
+shrike_SOURCES += shaders\CookTorrance.cpp
+shrike_SOURCES += shaders\Banks.cpp
+shrike_SOURCES += shaders\BrickWall.cpp
+shrike_SOURCES += shaders\BrickHorizon.cpp
+shrike_SOURCES += shaders\HorizonMapping.cpp
+shrike_SOURCES += shaders\HairShader.cpp
+shrike_SOURCES += shaders\LCD.hpp shaders\LCD.cpp
+shrike_SOURCES += shaders\LCDSmall.hpp shaders\LCDSmall.cpp
+shrike_SOURCES += shaders\LafortuneShader.cpp
+shrike_SOURCES += shaders\Derivatives.cpp
+shrike_SOURCES += shaders\Checkerboard.cpp
+shrike_SOURCES += shaders\VertexBranching.cpp
+shrike_SOURCES += shaders\Tangents.cpp
+shrike_SOURCES += shaders\TangentArrows.cpp
+shrike_SOURCES += shaders\BumpMapShader.cpp
+shrike_SOURCES += shaders\FragmentBranching.cpp
+shrike_SOURCES += shaders\SparseTexture.cpp
+shrike_SOURCES += shaders\FragmentLooping.cpp
+shrike_SOURCES += shaders\SpatialBRDF.cpp
+shrike_SOURCES += shaders\HDRViewer.cpp HDRImages\HDRImage.cpp
+shrike_SOURCES += shaders\HDRMipMap.cpp
+shrike_SOURCES += shaders\HDRInterp.cpp
+shrike_SOURCES += shaders\HDRToneMapping.cpp
+shrike_SOURCES += shaders\HDRWrap.cpp
+shrike_SOURCES += shaders\CubeMap.cpp
+shrike_SOURCES += shaders\HDRLucite.cpp shaders\HDRGlass.cpp shaders\HDRShinyBumpMap.cpp
+#shrike_SOURCES += shaders\EdgeDetection.cpp
+shrike_SOURCES += shaders\CannyEdgeDetector.cpp
+shrike_SOURCES += shaders\GaussianBlur.cpp
+shrike_SOURCES += shaders\AnisotropicDiffusion.cpp
+shrike_SOURCES += shaders\LargeTexture.cpp
 
-DEBUG_LDADD  = $(OPENGL_DIR)\lib\OPENGL32.LIB $(SH_INSTALLDIR)\lib\libshd.lib
-DEBUG_LDADD += $(SH_INSTALLDIR)\lib\libshutild.lib
-# DEBUG_LDADD += $(WXWIN_DIR)\lib\WXMSW.LIB
-# DEBUG_LDADD += -machine:i386 -subsystem:windows,4.0 -entry:WinMainCRTStartup
-DEBUG_LDADD += C:\DEV\WXWIN\lib\wxmswd.lib kernel32.lib user32.lib gdi32.lib 
-DEBUG_LDADD += comdlg32.lib winspool.lib winmm.lib shell32.lib oldnames.lib comctl32.lib
-DEBUG_LDADD += ole32.lib oleaut32.lib uuid.lib rpcrt4.lib advapi32.lib wsock32.lib 
-# DEBUG_LDADD += C:\DEV\WXWIN\lib\regexd.lib C:\DEV\WXW
-# IN\lib\pngd.lib C:\DEV\WXWIN\lib\zlibd.lib C:\DEV\WXWIN\lib\jpegd.lib C:\DEV\WXWIN\lib
-# \tiffd.lib >> C:\DOCUME~1\sdt\LOCALS~1\Temp\nm630.tmp
+shrike_CXXFILES = $(filter %.cpp,$(shrike_SOURCES))
+shrike_RELEASE_OBJECTS = $(shrike_CXXFILES:.cpp=.r.obj)
+shrike_DEBUG_OBJECTS = $(shrike_CXXFILES:.cpp=.d.obj)
 
-RELEASE_LDADD  = $(OPENGL_DIR)\lib\OPENGL32.LIB $(SH_INSTALLDIR)\lib\libsh.lib
-RELEASE_LDADD += $(SH_INSTALLDIR)\lib\libshutil.lib
-# RELEASE_LDADD += $(WXWIN_DIR)\lib\WXMSW.LIB
-# RELEASE_LDADD += -machine:i386 -subsystem:windows,4.0 -entry:WinMainCRTStartup
-RELEASE_LDADD += C:\DEV\WXWIN\lib\wxmsw.lib kernel32.lib user32.lib gdi32.lib 
-RELEASE_LDADD += comdlg32.lib winspool.lib winmm.lib shell32.lib oldnames.lib comctl32.lib
-RELEASE_LDADD += ole32.lib oleaut32.lib uuid.lib rpcrt4.lib advapi32.lib wsock32.lib 
-# RELEASE_LDADD += C:\DEV\WXWIN\lib\regexd.lib C:\DEV\WXW
-# IN\lib\pngd.lib C:\DEV\WXWIN\lib\zlibd.lib C:\DEV\WXWIN\lib\jpegd.lib C:\DEV\WXWIN\lib
-# \tiffd.lib >> C:\DOCUME~1\sdt\LOCALS~1\Temp\nm630.tmp
+shrike_RELEASE_LDADD  = $(SH_INSTALLDIR)\lib\libsh.lib
+shrike_RELEASE_LDADD += $(SH_INSTALLDIR)\lib\libshutil.lib
+shrike_RELEASE_LDADD += $(WXWIN_RELEASE_LDADD)
+shrike_RELEASE_LDADD += opengl32.lib wsock32.lib
+shrike_RELEASE_LDADD += kernel32.lib user32.lib gdi32.lib
+shrike_RELEASE_LDADD += shell32.lib ole32.lib comctl32.lib
+shrike_RELEASE_LDADD += comdlg32.lib rpcrt4.lib advapi32.lib
 
-shrike_r.exe: $(shrike_RELEASE_OBJECTS)
-	$(CXX) /Feshrike_r $^ $(RELEASE_LDFLAGS) $(RELEASE_LDADD)
+shrike_DEBUG_LDADD  = $(SH_INSTALLDIR)\lib\libshd.lib
+shrike_DEBUG_LDADD += $(SH_INSTALLDIR)\lib\libshutild.lib
+shrike_DEBUG_LDADD += $(WXWIN_DEBUG_LDADD)
+shrike_DEBUG_LDADD += opengl32.lib wsock32.lib
+shrike_DEBUG_LDADD += kernel32.lib user32.lib gdi32.lib
+shrike_DEBUG_LDADD += shell32.lib ole32.lib comctl32.lib
+shrike_DEBUG_LDADD += comdlg32.lib rpcrt4.lib advapi32.lib
 
-shrike_d.exe: $(shrike_DEBUG_OBJECTS)
-	$(CXX) /Feshrike_d $^ $(DEBUG_LDFLAGS) $(DEBUG_LDADD)
+shrike.exe: $(shrike_RELEASE_OBJECTS)
+	$(LD) /out:$@ $^ $(RELEASE_LDFLAGS) $(shrike_RELEASE_LDADD)
 
-shrike_DEPENDS = $(shrike_SOURCES:.cpp=.d.d) $(shrike_SOURCES:.cpp=.r.d)
+shriked.exe: $(shrike_DEBUG_OBJECTS)
+	$(LD) /out:$@ $^ $(DEBUG_LDFLAGS) $(shrike_DEBUG_LDADD)
 
-%.r.i: %.cpp
-	$(CXX) /Fo$@ /P $(RELEASE_CPPFLAGS) $<
+install: $(RELEASE_TARGETS) $(DEBUG_TARGETS)
+	-mkdir $(SH_INSTALLDIR)
+	copy shrike.exe $(SH_INSTALLDIR)
+	copy shriked.exe $(SH_INSTALLDIR)
 
-include ../../sh/win32.mk
-CPPFLAGS += -I.
-CPPFLAGS += -IHDRImages
-CPPFLAGS += -I$(SH_INSTALLDIR)\include
-CPPFLAGS += -DSHMEDIA_DIR=\"\\\\DEV\\\\SHMEDIA\"
-CPPFLAGS += -I$(OPENGL_DIR)\include
-CPPFLAGS += -I$(WXWIN_DIR)\include
-CPPFLAGS += -I$(WXWIN_DIR)\lib\msw
-CPPFLAGS +=  -DSH_DLLEXPORT=__declspec(dllimport)
+shrike_DEPENDS = $(shrike_CXXFILES:.cpp=.r.d) $(shrike_CXXFILES:.cpp=.d.d)
 
-ifdef $(DISABLE_DEPENDS)
-include $(shrike_DEPENDS)
-endif
-
-libsh.dll: $(SH_INSTALLDIR)\lib\libsh.dll
-	copy $< $@
-
-libshd.dll: $(SH_INSTALLDIR)\lib\libshd.dll
-	copy $< $@
+include ../win32.mk
+INCLUDES += /I.
+INCLUDES += /IHDRImages
+INCLUDES += /I$(SH_INSTALLDIR)\include
+-include $(shrike_DEPENDS)
