@@ -27,7 +27,6 @@
 #include <sh/sh.hpp>
 #include <sh/shutil.hpp>
 #include <iostream>
-#define _USE_MATH_DEFINES
 #include <cmath>
 #include "Shader.hpp"
 #include "Globals.hpp"
